[package]
name = "tiny_file_server"
version = "0.1.5"
authors = [
    "Alexander XX <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/tiny_file_server"
description = "The simplest file server for the web development purposes"
keywords = ["noogen", "simple", "static", "http", "server"]
categories = ["web-programming::http-server", "development-tools::debugging"]

[dependencies]
tiny_http = "0.12"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"
